# Mendrift

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  server.json
.github/workflows/: test.yml
data/: current.parquet  reference.parquet
scripts/: demo_interrupt.py  gen_variants.py  run_traj.py  seed_demo.py
src/mendrift/agent/: graph.py  llm.py  local_tools.py  nodes.py
src/mendrift/evals/: simulate.py  tool_layers.py
src/mendrift/evals/trajectories/: traj_001_drift_rollback.json  traj_002_noise_close.json  traj_003_approval_denied.json  traj_004_quality_retrain.json  traj_005_latency_infra.json  traj_006_data_outage.json  traj_007_tool_failure.json  traj_100_drift_after_deploy_rollback_v0_fraud-sco.json  traj_101_drift_after_deploy_rollback_v1_limit-opt.json  traj_101_drift_seasonal_monitor.json  traj_102_drift_after_deploy_rollback_v2_credit-ri.json  traj_102_drift_upstream_schema_rename.json  traj_103_drift_after_deploy_rollback_v3_churn-pre.json  traj_103_drift_low_importance_monitor.json  traj_104_drift_deploy_docs_only.json  traj_104_flapping_alert_closed_as_noise_v0_fraud-.json  traj_105_drift_label_shift_retrain.json  traj_105_flapping_alert_closed_as_noise_v1_limit-.json  traj_106_drift_feature_store_update.json  traj_106_flapping_alert_closed_as_noise_v2_credit.json  traj_107_flapping_alert_closed_as_noise_v3_churn-.json  traj_108_rollback_proposed_human_declines_v0_chur.json  traj_109_rollback_proposed_human_declines_v1_frau.json  traj_110_rollback_proposed_human_declines_v2_cred.json  traj_111_rollback_proposed_human_declines_v3_aml-.json  traj_112_quality_degradation_retrain_v0_aml-scree.json  traj_113_quality_degradation_retrain_v1_churn-pre.json  traj_114_quality_degradation_retrain_v2_limit-opt.json  traj_115_quality_degradation_retrain_v3_credit-ri.json  traj_116_latency_only_infra_issue_v0_churn-predic.json  traj_117_latency_only_infra_issue_v1_aml-screener.json  (+16 more)
src/mendrift_mcp/: server.py
src/mendrift_mcp/tools/: incident.py  monitoring.py
tests/: test_approval_gate.py  test_trajectories.py
(+12 files in other folders)
